# spm

./: Cargo.toml  PROJECT_STRUCTURE.md  README.md  dist-workspace.toml  launch_test.sh  test_spm.sh
.github/workflows/: release.yml
spm-tester/: install.sh  main.sh  package.json  uninstall.sh
spm-tester/src/tests/: basic_commands.sh  check_command.sh  dependency_management.sh  error_handling.sh  execution_path.sh  github_library_test.sh  github_repository.sh  init_command.sh  library_dependency.sh  package_creation.sh  package_installation.sh
spm-tester/src/utils/: test_utils.sh
spm_test_dir/spm-args-test/: main.sh  package.json
spm_test_dir/spm-lib-package/: install.sh  package.json
spm_test_dir/spm-test-package/: main.sh  package.json
spm_test_dir/spm-test-package-ns/: main.sh  package.json
spm_test_dir/spm_test_dir/: syntax_test.sh
spm_test_dir/spm_test_dir/ambiguous-pkg/: main.sh  package.json
spm_test_dir/spm_test_dir/init-lib-test/: lib.sh  package.json  uninstall.sh
spm_test_dir/spm_test_dir/init-test/: main.sh  package.json
spm_test_dir/spm_test_dir/init-test/src/std/: include.sh
spm_test_dir/spm_test_dir/repo-like-name/: main.sh  package.json
src/: arguments.rs  display_control.rs  main.rs  package.rs  program.rs  properties.rs  shell.rs  utilities.rs
src/commons/: git.rs  mod.rs  utilities.rs
src/package/: creator.rs  dependency.rs  manager.rs  metadata.rs  mod.rs  std_lib.rs
test/: install.sh  main.sh  package.json  uninstall.sh
test-package/: package.json
