[package]
name = "spm"
version = "0.1.0"
edition = "2024"
description = "Shell Package Manager written in Rust with native AI support."
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/spm"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.27", features = ["cargo", "derive", "string"] }
console = "0.15.11"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
which = "7.0.3"
