[package]
name = "spm"
version = "0.1.3"
edition = "2024"
description = "Shell Package Manager written in Rust with native AI support."
authors =  ["Xinyu Bao <baoxinyuworks@163.com>"]
readme = "README.md"
repository = "https://github.com/aspadax/spm"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.27", features = ["cargo", "derive", "string"] }
console = "0.15.11"
dirs = "6.0.0"
git2 = "0.20.1"
prettytable = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
which = "7.0.3"
auth-git2 = { git = "https://github.com/de-vri-es/auth-git2-rs" }

# Add these to ensure proper vendoring:
openssl-sys = { version = "0.9", features = ["vendored"] }  # Force vendored OpenSSL
libz-sys = { version = "1.1", features = ["static"] }  # Static zlib

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.17.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
